--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,46 @@
 {
   "manifest_version": 3,
-  "name": "QR Code Generator",
+  "name": "二维码生成器",
   "version": "1.0.0",
-  "description": "The simplest Vue browser extension for converting text to QR codes.",
+  "description": "最简单的 Vue 浏览器扩展，用于将文本转换为二维码。",
   "action": {
     "default_popup": "popup.html",
-    "default_title": "QR Code Generator",
+    "default_title": "二维码生成器",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
-      "96": "icons/icon96.png"
+      "48": "icons/icon48.png"
     }
   },
+  "commands": {
+    // 快捷键打开，Ctrl+Shift+F可以快速打开插件
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
+      },
+      "description": "打开二维码生成器"
+    }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "background": {
     "service_worker": "background.js"
   },
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
-    "96": "icons/icon96.png"
+    "48": "icons/icon48.png"
   },
-  "permissions": ["storage", "clipboardWrite"]
+  "permissions": [
+    "storage",
+    "clipboardWrite",
+    "activeTab",
+    "scripting",
+    "contextMenus"
+  ]
 }
